--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homebridge-ewelink-max",
+  "name": "homebridge-ewelink-rf",
   "version": "0.1.10",
   "author": "gbro115",
   "contributors": [
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/howanghk/homebridge-ewelink"
+    "url": "https://github.com/pagemx/homebridge-ewelink-rf"
   },
   "dependencies": {
     "nonce": "^1.0.4",
