--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-ewelink-rf",
   "version": "0.1.10",
-  "author": "gbro115",
+  "author": "pagemx",
   "contributors": [
     "Tomasz Bzymek",
     "howanghk"
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pagemx/homebridge-ewelink-rf"
+    "url": "https://github.com/pagemx/homebridge-ewelink-rf/"
   },
   "dependencies": {
     "nonce": "^1.0.4",
